Code für A4 Diagramme optimiert (abgabe war schon aber mir egal ich muss den code verbessern)

--- a/bwm/bwm.tex
+++ b/bwm/bwm.tex
@@ -41,7 +41,13 @@
 
 % Grafiken für A3 und A4
 \usepackage{tikz}
-\usetikzlibrary{angles,quotes,positioning,patterns,patterns.meta,decorations.pathreplacing}
+\usetikzlibrary{
+	angles,
+	quotes,
+	positioning,
+	patterns.meta, % Linienmuster
+	decorations.pathreplacing % Geschweifte Klammern
+}
 
 % Mathezeug
 \usepackage[fleqn]{amsmath}
@@ -575,60 +581,57 @@ Hierfür relevante Punkte und Strecken:
 % ========= A4 =========
 \section[]{Aufgabe 4}
 
+% Was häufig benutzt wird
+\newcommand{\Feld}{ +(-0.5,-0.5) rectangle +(0.5,0.5) }
+\newcommand{\Ecke}{ [pattern={Lines[angle=135,distance=2]}, pattern color=orange] \Feld }
+
+\newcommand{\RenateZug}{ [pattern={Lines[angle=45,distance=2]}, pattern color=magenta] \Feld }
+\newcommand{\RenateFeld}{ [fill=magenta] \Feld }
+\newcommand{\ErhardZug}{ [pattern={Lines[angle=45,distance=2]}, pattern color=teal] \Feld }
+\newcommand{\ErhardFeld}{ [fill=teal] \Feld }
+
 In allen folgenden Diagrammen steht eine gestrichelte Linie für eine Symmetrieachse, magenta und türkis markierte Felder sind ausgemalt, wobei der Anfänger die Farbe magenta hat.
 \\[10pt]
 Läuft das Spiel zuletzt auf eine $2\times2$-Ecke hinaus, verliert der Spieler, der zuerst in dieses Feld malen muss: \\
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-
-	\draw (1,1) \Square;
-	\draw (2,1) \Square;
-	\draw (2,2) \Square;
+	\draw (1,1) \Feld;
+	\draw (2,1) \Feld;
+	\draw (2,2) \Feld;
 	\draw [dashed] (3,0) -- (0,3);
 
 	\node at (3.5,1.5) {$\rightarrow$};
-	\draw (5,1) \RSquare;
-	\draw (6,1) \Square;
-	\draw (6,2) \Square;
+	\draw (5,1) \RenateZug;
+	\draw (6,1) \Feld;
+	\draw (6,2) \Feld;
 	\node at (7.5,1.5) {$\rightarrow$};
-	\draw (9,1) \RSquare;
-	\draw (10,1) \ESquare;
-	\draw (10,2) \ESquare;
+	\draw (9,1) \RenateZug;
+	\draw (10,1) \ErhardZug;
+	\draw (10,2) \ErhardZug;
 	\node[anchor=west] at (11.5,1.5) {$\rightarrow$ Anfänger verliert};
 
 	\node at (3.5,4.5) {$\rightarrow$};
-	\draw (5,4) \RSquare;
-	\draw (6,4) \RSquare;
-	\draw (6,5) \Square;
+	\draw (5,4) \RenateZug;
+	\draw (6,4) \RenateZug;
+	\draw (6,5) \Feld;
 	\node at (7.5,4.5) {$\rightarrow$};
-	\draw (9,4) \RSquare;
-	\draw (10,4) \RSquare;
-	\draw (10,5) \ESquare;
+	\draw (9,4) \RenateZug;
+	\draw (10,4) \RenateZug;
+	\draw (10,5) \ErhardZug;
 	\node[anchor=west] at (11.5,4.5) {$\rightarrow$ Anfänger verliert};
 \end{tikzpicture}
 \\
 Basierend darauf gilt dies auch für eine Ecke, die in beide Dimensionen beliebig viele Felder größer ist. Derjenige, der nicht anfängt, kopiert exakt die Menge an ausgemalten Feldern des Anfängers ($P$) auf der anderen Kante und zwingt den anfangenden Spieler in eine weitere kleinere $p\times p$-Ecke (dargestellt durch Orange):
 \\
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\Circle{+(0, 0) circle (0.35)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RCircle{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(0, 0) circle (0.35)}
-	\newcommand\ECircle{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(0, 0) circle (0.35)}
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-
-	\draw (1,1) \RSquare;
-	\draw (2,1) \RSquare;
+	\draw (1,1) \RenateZug;
+	\draw (2,1) \RenateZug;
 	\node[anchor=center] at (3,1) {$...$};
-	\draw (4,1) \RSquare;
-	\draw (5,1) \Corner;
-	\draw (5,2) \ESquare;
+	\draw (4,1) \RenateZug;
+	\draw (5,1) \Ecke;
+	\draw (5,2) \ErhardZug;
 	\node[anchor=center] at (5,3) {$...$};
-	\draw (5,4) \ESquare;
-	\draw (5,5) \ESquare;
+	\draw (5,4) \ErhardZug;
+	\draw (5,5) \ErhardZug;
 	\draw [dashed] (6,0) -- (3,3);
 
 	\draw [decorate,decoration={brace,amplitude=5pt}] (0.55,0) -- (4.45,0) node[midway,yshift=1em]{P};
@@ -644,158 +647,116 @@ Fährt Renate diese Strategie, kann sie Erhard irgendwann in eine $2\times2$-Eck
 Läuft das Spiel auf eine "Hufeisenform" hinaus, verliert auch wieder der Spieler, der zuerst innerhalb dieser Form dran ist:
 \\
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RRSquare{[fill=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\EESquare{[fill=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \Feld;
+	\draw (2,1) \Feld;
+	\draw (3,1) \Feld;
+	\draw (4,1) \Feld;
+	\draw (5,1) \Feld;
+	\draw (6,1) \Feld;
+	\draw (6,2) \Feld;
+	\draw (6,3) \Feld;
 
-	\draw (1,1) \Square;
-	\draw (2,1) \Square;
-	\draw (3,1) \Square;
-	\draw (4,1) \Square;
-	\draw (5,1) \Square;
-	\draw (6,1) \Square;
-	\draw (6,2) \Square;
-	\draw (6,3) \Square;
+	\draw (6,4) \Feld;
+	\draw (1,4) \RenateZug;
 
-	\draw (6,4) \Square;
-	\draw (1,4) \RSquare;
-
-	\draw (1,3) \Square;
-	\draw (1,2) \Square;
+	\draw (1,3) \Feld;
+	\draw (1,2) \Feld;
 
 	\draw [dashed] (3.5,0) -- (3.5,5);
 	\node[anchor=west] at (6.5,2.5) {$\rightarrow$};
 \end{tikzpicture}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RRSquare{[fill=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\EESquare{[fill=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \Feld;
+	\draw (2,1) \Feld;
+	\draw (3,1) \Feld;
+	\draw (4,1) \Feld;
+	\draw (5,1) \Feld;
+	\draw (6,1) \Feld;
+	\draw (6,2) \Feld;
+	\draw (6,3) \Feld;
 
-	\draw (1,1) \Square;
-	\draw (2,1) \Square;
-	\draw (3,1) \Square;
-	\draw (4,1) \Square;
-	\draw (5,1) \Square;
-	\draw (6,1) \Square;
-	\draw (6,2) \Square;
-	\draw (6,3) \Square;
+	\draw (6,4) \ErhardZug;
+	\draw (1,4) \RenateFeld;
 
-	\draw (6,4) \ESquare;
-	\draw (1,4) \RRSquare;
-
-	\draw (1,3) \Square;
-	\draw (1,2) \Square;
+	\draw (1,3) \Feld;
+	\draw (1,2) \Feld;
 
 	\draw [dashed] (3.5,0) -- (3.5,5);
 	\node[anchor=west] at (6.5,2.5) {$\rightarrow$};
 \end{tikzpicture}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RRSquare{[fill=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\EESquare{[fill=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \Feld;
+	\draw (2,1) \Feld;
+	\draw (3,1) \Feld;
+	\draw (4,1) \Feld;
+	\draw (5,1) \Feld;
+	\draw (6,1) \Feld;
+	\draw (6,2) \Feld;
+	\draw (6,3) \Feld;
 
-	\draw (1,1) \Square;
-	\draw (2,1) \Square;
-	\draw (3,1) \Square;
-	\draw (4,1) \Square;
-	\draw (5,1) \Square;
-	\draw (6,1) \Square;
-	\draw (6,2) \Square;
-	\draw (6,3) \Square;
+	\draw (6,4) \ErhardFeld;
+	\draw (1,4) \RenateFeld;
 
-	\draw (6,4) \EESquare;
-	\draw (1,4) \RRSquare;
-
-	\draw (1,3) \RSquare;
-	\draw (1,2) \Square;
+	\draw (1,3) \RenateZug;
+	\draw (1,2) \Feld;
 
 	\draw [dashed] (3.5,0) -- (3.5,5);
 	\node[anchor=west] at (6.5,2.5) {$\rightarrow$};
 \end{tikzpicture}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RRSquare{[fill=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\EESquare{[fill=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \Feld;
+	\draw (2,1) \Feld;
+	\draw (3,1) \Feld;
+	\draw (4,1) \Feld;
+	\draw (5,1) \Feld;
+	\draw (6,1) \Feld;
+	\draw (6,2) \Feld;
+	\draw (6,3) \ErhardZug;
 
-	\draw (1,1) \Square;
-	\draw (2,1) \Square;
-	\draw (3,1) \Square;
-	\draw (4,1) \Square;
-	\draw (5,1) \Square;
-	\draw (6,1) \Square;
-	\draw (6,2) \Square;
-	\draw (6,3) \ESquare;
+	\draw (6,4) \ErhardFeld;
+	\draw (1,4) \RenateFeld;
 
-	\draw (6,4) \EESquare;
-	\draw (1,4) \RRSquare;
-
-	\draw (1,3) \RRSquare;
-	\draw (1,2) \Square;
+	\draw (1,3) \RenateFeld;
+	\draw (1,2) \Feld;
 
 	\draw [dashed] (3.5,0) -- (3.5,5);
 	\node[anchor=west] at (6.5,2.5) {$\rightarrow$};
 \end{tikzpicture}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RRSquare{[fill=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\EESquare{[fill=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \Feld;
+	\draw (2,1) \Feld;
+	\draw (3,1) \Feld;
+	\draw (4,1) \Feld;
+	\draw (5,1) \Feld;
+	\draw (6,1) \Feld;
+	\draw (6,2) \Feld;
+	\draw (6,3) \ErhardFeld;
 
-	\draw (1,1) \Square;
-	\draw (2,1) \Square;
-	\draw (3,1) \Square;
-	\draw (4,1) \Square;
-	\draw (5,1) \Square;
-	\draw (6,1) \Square;
-	\draw (6,2) \Square;
-	\draw (6,3) \EESquare;
+	\draw (6,4) \ErhardFeld;
+	\draw (1,4) \RenateFeld;
 
-	\draw (6,4) \EESquare;
-	\draw (1,4) \RRSquare;
-
-	\draw (1,3) \RRSquare;
-	\draw (1,2) \RSquare;
+	\draw (1,3) \RenateFeld;
+	\draw (1,2) \RenateZug;
 
 	\draw [dashed] (3.5,0) -- (3.5,5);
 	\node[anchor=west] at (6.5,2.5) {$\rightarrow$};
 \end{tikzpicture}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RRSquare{[fill=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\EESquare{[fill=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \ErhardZug;
+	\draw (2,1) \ErhardZug;
+	\draw (3,1) \ErhardZug;
+	\draw (4,1) \ErhardZug;
+	\draw (5,1) \Ecke;
+	\draw (6,1) \Ecke;
+	\draw (6,2) \Ecke;
+	\draw (6,3) \ErhardFeld;
 
-	\draw (1,1) \ESquare;
-	\draw (2,1) \ESquare;
-	\draw (3,1) \ESquare;
-	\draw (4,1) \ESquare;
-	\draw (5,1) \Corner;
-	\draw (6,1) \Corner;
-	\draw (6,2) \Corner;
-	\draw (6,3) \EESquare;
+	\draw (6,4) \ErhardFeld;
+	\draw (1,4) \RenateFeld;
 
-	\draw (6,4) \EESquare;
-	\draw (1,4) \RRSquare;
-
-	\draw (1,4) \Square;
-	\draw (1,3) \RRSquare;
-	\draw (1,2) \RRSquare;
+	\draw (1,4) \Feld;
+	\draw (1,3) \RenateFeld;
+	\draw (1,2) \RenateFeld;
 
 	\draw [dashed] (3.5,0) -- (3.5,5);
 \end{tikzpicture}
@@ -812,106 +773,82 @@ Hierfür beginnt Renate mit dem Ausmalen eines einzelnen Feldes E in einer Ecke.
 Ab dem zweiten Diagramm macht pro Bild immer erst Erhard (türkis) einen Zug, dann Renate (magenta):
 \\[10pt]
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\Circle{+(0, 0) circle (0.35)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RCircle{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(0, 0) circle (0.35)}
-	\newcommand\ECircle{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(0, 0) circle (0.35)}
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \Ecke;
+	\draw (2,1) \Ecke;
+	\draw (3,1) \Ecke;
+	\draw (4,1) \Ecke;
+	\draw (5,1) \Ecke;
+	\draw (6,1) \Ecke;
+	\draw (6,2) \Ecke;
+	\draw (6,3) \Ecke;
+	\draw (6,4) \Ecke;
+	\draw (6,5) \Ecke;
+	\draw (6,6) \Ecke;
 
-	\draw (1,1) \Corner;
-	\draw (2,1) \Corner;
-	\draw (3,1) \Corner;
-	\draw (4,1) \Corner;
-	\draw (5,1) \Corner;
-	\draw (6,1) \Corner;
-	\draw (6,2) \Corner;
-	\draw (6,3) \Corner;
-	\draw (6,4) \Corner;
-	\draw (6,5) \Corner;
-	\draw (6,6) \Corner;
+	\draw (5,6) \Feld;
+	\draw (4,6) \Feld;
+	\draw (3,6) \Feld;
+	\draw (2,6) \Feld;
+	\draw (1,6) \RenateZug;
 
-	\draw (5,6) \Square;
-	\draw (4,6) \Square;
-	\draw (3,6) \Square;
-	\draw (2,6) \Square;
-	\draw (1,6) \RSquare;
-
-	\draw (1,5) \Square;
-	\draw (1,4) \Square;
-	\draw (1,3) \Square;
-	\draw (1,2) \Square;
+	\draw (1,5) \Feld;
+	\draw (1,4) \Feld;
+	\draw (1,3) \Feld;
+	\draw (1,2) \Feld;
 
 	\draw [dashed] (7,0) -- (0,7);
 	\node[anchor=west] at (6.5,3.5) {$\rightarrow$};
 \end{tikzpicture}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\Circle{+(0, 0) circle (0.35)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RRSquare{[fill=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\EESquare{[fill=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \Ecke;
+	\draw (2,1) \Ecke;
+	\draw (3,1) \Ecke;
+	\draw (4,1) \Ecke;
+	\draw (5,1) \Ecke;
+	\draw (6,1) \Ecke;
+	\draw (6,2) \Ecke;
+	\draw (6,3) \Ecke;
+	\draw (6,4) \Ecke;
+	\draw (6,5) \Ecke;
+	\draw (6,6) \Ecke;
 
-	\draw (1,1) \Corner;
-	\draw (2,1) \Corner;
-	\draw (3,1) \Corner;
-	\draw (4,1) \Corner;
-	\draw (5,1) \Corner;
-	\draw (6,1) \Corner;
-	\draw (6,2) \Corner;
-	\draw (6,3) \Corner;
-	\draw (6,4) \Corner;
-	\draw (6,5) \Corner;
-	\draw (6,6) \Corner;
+	\draw (5,6) \Feld;
+	\draw (4,6) \Feld;
+	\draw (3,6) \Feld;
+	\draw (2,6) \ErhardZug;
+	\draw (1,6) \RenateFeld;
 
-	\draw (5,6) \Square;
-	\draw (4,6) \Square;
-	\draw (3,6) \Square;
-	\draw (2,6) \ESquare;
-	\draw (1,6) \RRSquare;
-
-	\draw (1,5) \RSquare;
-	\draw (1,4) \Square;
-	\draw (1,3) \Square;
-	\draw (1,2) \Square;
+	\draw (1,5) \RenateZug;
+	\draw (1,4) \Feld;
+	\draw (1,3) \Feld;
+	\draw (1,2) \Feld;
 
 	\draw [dashed] (7,0) -- (0,7);
 	\node[anchor=west] at (6.5,3.5) {$\rightarrow$};
 \end{tikzpicture}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\Circle{+(0, 0) circle (0.35)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RRSquare{[fill=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\EESquare{[fill=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \Ecke;
+	\draw (2,1) \Ecke;
+	\draw (3,1) \Ecke;
+	\draw (4,1) \Ecke;
+	\draw (5,1) \Ecke;
+	\draw (6,1) \Ecke;
+	\draw (6,2) \Ecke;
+	\draw (6,3) \Ecke;
+	\draw (6,4) \Ecke;
+	\draw (6,5) \Ecke;
+	\draw (6,6) \Ecke;
 
-	\draw (1,1) \Corner;
-	\draw (2,1) \Corner;
-	\draw (3,1) \Corner;
-	\draw (4,1) \Corner;
-	\draw (5,1) \Corner;
-	\draw (6,1) \Corner;
-	\draw (6,2) \Corner;
-	\draw (6,3) \Corner;
-	\draw (6,4) \Corner;
-	\draw (6,5) \Corner;
-	\draw (6,6) \Corner;
+	\draw (5,6) \Feld;
+	\draw (4,6) \RenateZug;
+	\draw (3,6) \RenateZug;
+	\draw (2,6) \ErhardFeld;
+	\draw (1,6) \RenateFeld;
 
-	\draw (5,6) \Square;
-	\draw (4,6) \RSquare;
-	\draw (3,6) \RSquare;
-	\draw (2,6) \EESquare;
-	\draw (1,6) \RRSquare;
-
-	\draw (1,5) \RRSquare;
-	\draw (1,4) \ESquare;
-	\draw (1,3) \ESquare;
-	\draw (1,2) \Square;
+	\draw (1,5) \RenateFeld;
+	\draw (1,4) \ErhardZug;
+	\draw (1,3) \ErhardZug;
+	\draw (1,2) \Feld;
 
 	\draw [dashed] (7,0) -- (0,7);
 \end{tikzpicture}
@@ -919,71 +856,55 @@ Ab dem zweiten Diagramm macht pro Bild immer erst Erhard (türkis) einen Zug, da
 Egal wieviele Felder Erhard in seinem nächsten Zug ausmalt, wird er in eine $p\times p$-Ecke (gezeichnet in Orange) gezwungen und verliert:
 \\
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\Circle{+(0, 0) circle (0.35)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RRSquare{[fill=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\EESquare{[fill=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \Ecke;
+	\draw (2,1) \Ecke;
+	\draw (3,1) \Ecke;
+	\draw (4,1) \Ecke;
+	\draw (5,1) \Ecke;
+	\draw (6,1) \Ecke;
+	\draw (6,2) \Ecke;
+	\draw (6,3) \Ecke;
+	\draw (6,4) \Ecke;
+	\draw (6,5) \Ecke;
+	\draw (6,6) \Ecke;
 
-	\draw (1,1) \Corner;
-	\draw (2,1) \Corner;
-	\draw (3,1) \Corner;
-	\draw (4,1) \Corner;
-	\draw (5,1) \Corner;
-	\draw (6,1) \Corner;
-	\draw (6,2) \Corner;
-	\draw (6,3) \Corner;
-	\draw (6,4) \Corner;
-	\draw (6,5) \Corner;
-	\draw (6,6) \Corner;
+	\draw (5,6) \ErhardZug;
+	\draw (4,6) \RenateFeld;
+	\draw (3,6) \RenateFeld;
+	\draw (2,6) \ErhardFeld;
+	\draw (1,6) \RenateFeld;
 
-	\draw (5,6) \ESquare;
-	\draw (4,6) \RRSquare;
-	\draw (3,6) \RRSquare;
-	\draw (2,6) \EESquare;
-	\draw (1,6) \RRSquare;
-
-	\draw (1,5) \RRSquare;
-	\draw (1,4) \EESquare;
-	\draw (1,3) \EESquare;
-	\draw (1,2) \RSquare;
+	\draw (1,5) \RenateFeld;
+	\draw (1,4) \ErhardFeld;
+	\draw (1,3) \ErhardFeld;
+	\draw (1,2) \RenateZug;
 
 	\draw [dashed] (7,0) -- (0,7);
 	\node[anchor=west] at (7,3.5) {oder};
 \end{tikzpicture}
 \begin{tikzpicture}[y=-0.5cm,x=0.5cm]
-	\newcommand\Square{+(-0.5,-0.5) rectangle +(0.5,0.5)}
-	\newcommand\Circle{+(0, 0) circle (0.35)}
-	\newcommand\RSquare{[pattern={Lines[angle=45,distance=2]}, pattern color=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\RRSquare{[fill=magenta] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\ESquare{[pattern={Lines[angle=45,distance=2]}, pattern color=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\EESquare{[fill=teal] +(-0.5,-0.5) rectangle +(0.5,0.5) }
-	\newcommand\Corner{[pattern={Lines[angle=135,distance=2]}, pattern color=orange] +(-0.5,-0.5) rectangle +(0.5,0.5) }
+	\draw (1,1) \RenateZug;
+	\draw (2,1) \Ecke;
+	\draw (3,1) \Ecke;
+	\draw (4,1) \Ecke;
+	\draw (5,1) \Ecke;
+	\draw (6,1) \Ecke;
+	\draw (6,2) \Ecke;
+	\draw (6,3) \Ecke;
+	\draw (6,4) \Ecke;
+	\draw (6,5) \Ecke;
+	\draw (6,6) \ErhardZug;
 
-	\draw (1,1) \RSquare;
-	\draw (2,1) \Corner;
-	\draw (3,1) \Corner;
-	\draw (4,1) \Corner;
-	\draw (5,1) \Corner;
-	\draw (6,1) \Corner;
-	\draw (6,2) \Corner;
-	\draw (6,3) \Corner;
-	\draw (6,4) \Corner;
-	\draw (6,5) \Corner;
-	\draw (6,6) \ESquare;
+	\draw (5,6) \ErhardZug;
+	\draw (4,6) \RenateFeld;
+	\draw (3,6) \RenateFeld;
+	\draw (2,6) \ErhardFeld;
+	\draw (1,6) \RenateFeld;
 
-	\draw (5,6) \ESquare;
-	\draw (4,6) \RRSquare;
-	\draw (3,6) \RRSquare;
-	\draw (2,6) \EESquare;
-	\draw (1,6) \RRSquare;
-
-	\draw (1,5) \RRSquare;
-	\draw (1,4) \EESquare;
-	\draw (1,3) \EESquare;
-	\draw (1,2) \RSquare;
+	\draw (1,5) \RenateFeld;
+	\draw (1,4) \ErhardFeld;
+	\draw (1,3) \ErhardFeld;
+	\draw (1,2) \RenateZug;
 
 	\draw [dashed] (7,0) -- (0,7);
 \end{tikzpicture}
