--- a/bwm/bwm.tex
+++ b/bwm/bwm.tex
@@ -516,13 +516,13 @@ Hierfür relevante Punkte und Strecken:
 		h &= R\sin\alpha \, \frac{\sin\alpha}{1+\sin\alpha} \tag{$3^\prime$}
 	\end{align*}
 \end{samepage}
-\goodbreak
 \begin{samepage}
 	Mit $(2)$, $(3^\prime)$ und $(4)$: \nopagebreak
 	\begin{align*}
 		m_{CD} &= \frac{h+r}{-x} \\
 		&= \frac{R\sin\alpha \frac{\sin\alpha}{1+\sin\alpha} + \frac{R\sin\alpha}{1+\sin\alpha}}{-R\sin\alpha\sqrt{\frac{1-\sin\alpha}{1+\sin\alpha}}} \\
 		&= \frac{\frac{\sin\alpha+1}{1+\sin\alpha}}{-\sqrt{\frac{1-\sin\alpha}{1+\sin\alpha}}} \\
+		&= \frac{1}{-\sqrt{\frac{1-\sin\alpha}{1+\sin\alpha}}} \\
 		&= -\sqrt{\frac{1+\sin\alpha}{1-\sin\alpha}} \\
 		&= -\frac{\sqrt{1+\sin\alpha}}{\sqrt{1-\sin\alpha}} \\
 		&= -\frac{\sqrt{1+\sin\alpha}\sqrt{1+\sin\alpha}}{\sqrt{1-\sin\alpha}\sqrt{1+\sin\alpha}} \\
