--- a/bwm/bwm.tex
+++ b/bwm/bwm.tex
@@ -53,15 +53,12 @@
 \usepackage[fleqn]{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
-% For °
+% Für °
 \usepackage{siunitx}
-% For floor function shortcut
-\usepackage{mathtools}
-\DeclarePairedDelimiter{\floor}{\lfloor}{\rfloor}
 
 \usepackage{multicol}
 
-% Fancy header
+% Fancyheader sind praktisch
 \usepackage{fancyhdr}
 \setlength{\headheight}{15pt}
 
