A3 Herleitungen mehr consistent und schöner

--- a/bwm/a3.tex
+++ b/bwm/a3.tex
@@ -148,7 +148,7 @@ Mit $ \cos\beta = \frac{b}{r} \Leftrightarrow b = r \cos\beta $ und $(1)$:
 		&= \frac{R \sin\beta}{(\frac{R+R\sin\beta-R\sin\beta}{1+\sin\beta})(1+\cos\beta)(1+\sin\beta)} \\
 		&= \frac{R \sin\beta}{(\frac{R}{1+\sin\beta})(1+\cos\beta)(1+\sin\beta)} \\
 		&= \frac{\sin\beta}{(\frac{1}{1+\sin\beta})(1+\cos\beta)(1+\sin\beta)} \\
-		&= \frac{(\sin\beta)(1+\sin\beta)}{(1+\sin\beta)(1+\cos\beta)} \\
+		&= \frac{(\sin\beta)(1+\sin\beta)}{(1+\sin\beta)(1+\cos\beta)} \\[15pt]
 		m_{AE} &= \frac{\sin\beta}{1+\cos\beta}
 	\end{align*}
 \end{samepage}
@@ -221,8 +221,10 @@ Hierfür relevante Punkte und Strecken:
 
 \begin{samepage}
 	\begin{align*}
-		\frac{l}{r} &= \frac{l+x}{r+h} \\
-		\text{Mit (3):} \\
+		\frac{l}{r} &= \frac{l+x}{r+h}
+	\end{align*}
+	Mit $(3)$:
+	\begin{align*}
 		\frac{l}{r} &= \frac{l+x}{r+\sqrt{r^2-x^2}} \\
 		(r+\sqrt{r^2-x^2})l &= r(l+x) \\
 		rl + l\sqrt{r^2-x^2} &= rl+rx \\
@@ -233,11 +235,15 @@ Hierfür relevante Punkte und Strecken:
 		x^2 (r^2+l^2) &= l^2 r^2 \\
 		x^2 &= \frac{l^2 r^2}{r^2 + l^2} \\
 		x &= \frac{lr}{\sqrt{\textcolor{magenta}{r}^2+\textcolor{blue}{l}^2}} \\
-		&= \frac{lr}{\textcolor{violet}{R-r}} \\
-		\text{Mit (1):} \\
-		&= \frac{\sqrt{R(R-2r)}r}{R-r} \\
-		\text{Mit (2):} \\
-		&= \frac{\sqrt{R(R-2\frac{R\sin\alpha}{1+\sin\alpha})}\frac{R\sin\alpha}{1+\sin\alpha}}{R-\frac{R\sin\alpha}{1+\sin\alpha}} \\
+		x &= \frac{lr}{\textcolor{violet}{R-r}}
+	\end{align*}
+	Mit $(1)$:
+	\begin{align*}
+		x &= \frac{\sqrt{R(R-2r)}r}{R-r}
+	\end{align*}
+	Mit $(2)$:
+	\begin{align*}
+		x &= \frac{\sqrt{R(R-2\frac{R\sin\alpha}{1+\sin\alpha})}\frac{R\sin\alpha}{1+\sin\alpha}}{R-\frac{R\sin\alpha}{1+\sin\alpha}} \\
 		&= \frac{\sqrt{R(R-2\frac{R\sin\alpha}{1+\sin\alpha})}\frac{R\sin\alpha}{1+\sin\alpha}}{\frac{R}{1+\sin\alpha}} \\
 		&= \frac{R\sqrt{\frac{1-\sin\alpha}{1+\sin\alpha}}\frac{\sin\alpha}{1+\sin\alpha}}{\frac{1}{1+\sin\alpha}} \\
 		x &= R\sin\alpha\sqrt{\frac{1-\sin\alpha}{1+\sin\alpha}} \tag{4}
@@ -269,7 +275,7 @@ Hierfür relevante Punkte und Strecken:
 		&= -\frac{\sqrt{1+\sin\alpha}\sqrt{1+\sin\alpha}}{\sqrt{1-\sin\alpha}\sqrt{1+\sin\alpha}} \\
 		&= -\frac{1+\sin\alpha}{\sqrt{1 - \sin^2\alpha}} \\
 		&= -\frac{\sin\alpha+1}{\sqrt{\cos^2\alpha}} \\[15pt]
-		&= -\frac{\sin\alpha+1}{\cos\alpha}
+		m_{CD} &= -\frac{\sin\alpha+1}{\cos\alpha}
 	\end{align*}
 \end{samepage}
 \goodbreak
@@ -311,7 +317,7 @@ Hierfür relevante Punkte und Strecken:
 	So lässt sich $m_{CD}$ anders ausdrücken:
 	\begin{align*}
 		m_{CD} &= -\frac{\sin\alpha+1}{\cos\alpha} \\
-		&= -\frac{\cos\beta+1}{\sin\beta} \\
+		&= -\frac{\cos\beta+1}{\sin\beta} \\[10pt]
 		m_{AE} &= \frac{\sin\beta}{\cos\beta+1}
 	\end{align*}
 
